[project]
name = "parkinglot"
version = "1.0.0"
authors = [{name = "Evaldas Visockas", email = "developersediary@gmail.com"}]
description = "Library for Rush Hour game"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
dependencies = []

[project.urls]
Repository = "https://github.com/EvalVis/ParkingLot"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.package-data]
parkinglot = ["rush.txt"]